New `--trailing-return` and `-R` command-line options and `trailing-return`
`set` option enable printing a function's or operator's return type using the
trailing return type syntax in C++11 and later.

** Verbose version
If either the `--version` or `-v` is given twice, additionally prints the set
of `configure` feature & package options and whether GNU readline (if compiled
in) is genuine.


* Changes in Cdecl 14.0

** Autocompletion bell
When hitting TAB and there are no completion matches, **cdecl** now rings the
terminal's bell.

** Cast into array
Now correctly allowing casting into an array when there is no name:

    cdecl> explain (char const *const[])
    cast into array of constant pointer to constant character

** Destructors in C
**Cdecl** now correctly reports destructors in C as an error.

** Digraph & trigraph fixes
The digraphs and trigraphs for `{` and `}` weren't emitted when they should
have been for nested types.  The digraphs & trigraphs for `{` and `}` weren't
parsed at all.  Both fixed.

** Lambdas
Support for C++ lambdas has been added:

    c++decl> explain [=,&x](int n)
    declare lambda capturing [copy by default, reference to x] (n as integer)

** Undid K&R function parameter printed as `int`
Undid a change in **cdecl** 11.5 where K&R C typeless function parameters were
printed as being of type `int`: they now again print as only their names.


* Changes in Cdecl 13.2

** Improved autocompletion
In cases where words in pseudo-Engish can only have a limited set of words that
follow in the grammar, only those are now suggested.

** Array of array check
Now correctly reporting declarations of arrays of incomplete arrays as an
error, e.g.:

    cdecl> explain void f(int x[][])
                                 ^
    23: error: array dimension required

** Fixed color prompts
Prompts were always being displayed in color even when --color=never.  Fixed.

** Function parameter checks