@@ -255,8 +255,7 @@ dup_params:
 
   if ( c_ast_is_referrer( ast ) ) {
     c_ast_t *const child_ast = ast->parent.of_ast;
-    if ( child_ast != NULL )
-      c_ast_set_parent( c_ast_dup( child_ast, ast_list ), dup_ast );
+    c_ast_set_parent( c_ast_dup( child_ast, ast_list ), dup_ast );
   }
 
   return dup_ast;
@@ -483,14 +482,14 @@ c_ast_t* c_ast_new( c_ast_kind_t kind, unsigned depth, c_loc_t const *loc,
 }
 
 void c_ast_set_parent( c_ast_t *child_ast, c_ast_t *parent_ast ) {
-  assert( child_ast != NULL );
-  assert( parent_ast != NULL );
-  assert( c_ast_is_referrer( parent_ast ) );
+  assert( parent_ast == NULL || c_ast_is_referrer( parent_ast ) );
 
-  child_ast->parent_ast = parent_ast;
-  parent_ast->parent.of_ast = child_ast;
+  if ( child_ast != NULL )
+    child_ast->parent_ast = parent_ast;
+  if ( parent_ast != NULL )
+    parent_ast->parent.of_ast = child_ast;
 
-  assert( !c_ast_has_cycle( child_ast ) );
+  assert( child_ast == NULL || !c_ast_has_cycle( child_ast ) );
 }
 
 c_ast_t* c_ast_visit( c_ast_t *ast, c_ast_visit_dir_t dir,
