@@ -88,8 +88,7 @@ static c_ast_t* c_ast_add_array_impl( c_ast_t *ast, c_ast_t *array_ast,
       //
       //      of_ast --> array_ast --> placeholder-parent
       //
-      if ( ast->parent_ast != NULL )
-        c_ast_set_parent( array_ast, ast->parent_ast );
+      c_ast_set_parent( array_ast, ast->parent_ast );
       c_ast_set_parent( of_ast, array_ast );
       return array_ast;
 
@@ -144,8 +143,7 @@ static c_ast_t* c_ast_add_array_impl( c_ast_t *ast, c_ast_t *array_ast,
         //
         //      ast --> array_ast --> ast-parent
         //
-        if ( ast->parent_ast != NULL )
-          c_ast_set_parent( array_ast, ast->parent_ast );
+        c_ast_set_parent( array_ast, ast->parent_ast );
         c_ast_set_parent( ast, array_ast );
         return array_ast;
       }
@@ -231,7 +229,8 @@ static c_ast_t* c_ast_append_array( c_ast_t *ast, c_ast_t *array_ast,
  * @param ast The AST to append to.
  * @param func_ast The function-like AST to append.  Its `ret_ast` must be
  * NULL.
- * @param ret_ast The AST to become the `ret_ast` of \a func_ast.
+ * @param ret_ast The AST to become the `ret_ast` of \a func_ast.  Must be NULL
+ * only when \a func_ast is a #K_CONSTRUCTOR.
  * @return Returns the AST to be used as the grammar production's return value.
  */
 NODISCARD
@@ -241,7 +240,8 @@ static c_ast_t* c_ast_add_func_impl( c_ast_t *ast, c_ast_t *func_ast,
   assert( func_ast != NULL );
   assert( is_1_bit_only_in_set( func_ast->kind, K_ANY_FUNCTION_LIKE ) );
   assert( func_ast->func.ret_ast == NULL );
-  assert( ret_ast != NULL );
+  assert( func_ast->kind != K_CONSTRUCTOR || ret_ast == NULL );
+  assert( func_ast->kind == K_CONSTRUCTOR || ret_ast != NULL );
 
   if ( (ast->kind & (K_ARRAY | K_ANY_POINTER | K_ANY_REFERENCE)) != 0 ) {
     switch ( ast->parent.of_ast->kind ) {
@@ -533,8 +533,10 @@ c_ast_t* c_ast_add_func( c_ast_t *ast, c_ast_t *func_ast, c_ast_t *ret_ast ) {
   assert( rv_ast != NULL );
   if ( c_sname_empty( &rv_ast->sname ) )
     rv_ast->sname = c_ast_take_name( ast );
-  c_type_t const taken_type = c_ast_take_storage( func_ast->func.ret_ast );
-  c_type_or_eq( &rv_ast->type, &taken_type );
+  if ( func_ast->func.ret_ast != NULL ) {
+    c_type_t const taken_type = c_ast_take_storage( func_ast->func.ret_ast );
+    c_type_or_eq( &rv_ast->type, &taken_type );
+  }
   return rv_ast;
 }
 
